# bixs-bundle-bash

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
assets/models/: apple.glb  banana.glb  bix.glb  cheese.glb  egg.glb  ice-cream.glb  tree-1.glb  tree-2.glb  tree.glb
assets/shaders/: ground.fs  ground.vs  model.fs  model.vs  particle.fs  water.fs  water.vs  world.vs
src/: components.hpp  game.cpp  game.h  main.cpp  util.cpp  util.h
src/ecs/: world.cpp
src/ecs/components/: camera.hpp  rendering.hpp
src/ecs/systems/: camera_systems.cpp  camera_systems.hpp  render_systems.cpp  render_systems.h  render_systems.hpp
src/world/: world.cpp  world.h
src/world/components/: camera.h  gameplay.h  interpolation.h  particle.h  render.h  rendering.h
src/world/systems/: camera_systems.cpp  camera_systems.h  gameplay.cpp  gameplay.h  interpolation.cpp  interpolation.h  particle.cpp  particle.h  render.cpp  render.h  render_systems.cpp  render_systems.h
src/world/terrain/: grid.cpp  ground.cpp  terrain.cpp  terrain.h  water.cpp
